# internal/api/handlers/requestadapters/schedulers.go
@@ -75,6 +75,10 @@ func FromApiPatchSchedulerRequestToChangeMap(request *api.PatchSchedulerRequest)
 		patchMap[patch.LabelAnnotations] = request.GetAnnotations()
 	}
 
+	if request.Labels != nil {
+		patchMap[patch.LabelLabels] = request.GetLabels()
+	}
+
 	return patchMap
 }
 
@@ -125,6 +129,7 @@ func FromApiCreateSchedulerRequestToEntity(request *api.CreateSchedulerRequest) 
 		schedulerAutoscaling,
 		fromApiForwarders(request.GetForwarders()),
 		request.GetAnnotations(),
+		request.GetLabels(),
 	)
 }
 
@@ -161,6 +166,7 @@ func FromApiNewSchedulerVersionRequestToEntity(request *api.NewSchedulerVersionR
 		schedulerAutoscaling,
 		fromApiForwarders(request.GetForwarders()),
 		request.GetAnnotations(),
+		request.GetLabels(),
 	)
 }
 
@@ -183,6 +189,7 @@ func FromEntitySchedulerToResponse(entity *entities.Scheduler) (*api.Scheduler, 
 		Autoscaling:   getAutoscaling(entity.Autoscaling),
 		Forwarders:    forwarders,
 		Annotations:   entity.Annotations,
+		Labels:        entity.Labels,
 	}, nil
 }
 
